refactor: fix ambiguous method roles and names